# pan-paic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-on-pr.yml  ci.yml  release.yml
.omc/state/: agent-replay-cbb6cf76-9b7b-43df-b41e-6a13302645fb.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
deploy/compose/: .env.example  docker-compose.yml
deploy/docker/: .dockerignore  Dockerfile
docs/: ARCHITECTURE.md  OPERATIONS.md  PRD.md  SECURITY.md
src/paic/: __init__.py  cli.py
src/paic/aggregation/: __init__.py  _greedy.py  engine.py
src/paic/api/: diffs.py  email_recipients.py  main.py  observability.py  profiles.py  reports.py  static.py  tenants.py  webhooks.py
src/paic/clients/: __init__.py  models.py  prisma.py
tests/: conftest.py
tests/fixtures/: prisma_response.json
tests/integration/: test_observability.py  test_poller.py
tests/unit/: test_aggregation.py  test_crypto.py  test_db_session.py  test_filters.py  test_healthz.py  test_known_prods.py  test_notifier_signing.py  test_notifier_webhook.py  test_poller.py  test_prisma_client.py  test_profiles.py  test_query_endpoint.py  test_renderers.py  test_reports_api.py  test_smtp.py  test_smtp_settings.py  test_smtp_template.py  test_storage_profiles.py  test_tenant_api.py  test_tenant_model.py  test_webhook.py  test_webhook_signing.py
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
(+46 files in other folders)
